// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux/reducers/serviceApi/emailAuth error 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": Object {
      "message": "serviceApi/AUTH_WITH_EMAIL request failed",
      "response": undefined,
    },
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/emailAuth refresh 1`] = `
Object {
  "emailAuth": Object {
    "data": User {
      "auth_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6InRoYW5obnhAb25hY2xvdmVyLmNvbSIsInVpZCI6IjgzOWU2OGJkLTJjN2QtNDkzMy1hMmI3LWYxZDM0MDkyODI0NiIsImlhdCI6MTUyMDg0MjA3MCwiZXhwIjoxNTIxNDQ2ODcwLCJqdGkiOiJiMDlhYjM4NS1iZWZiLTRiNzYtODQyZC0xODQ1ZWU2MGJhNGEifQ.zUxEMCY2zYj6y4jw6-sJAHig-hPzDY_l_MoCT4XfbhI",
      "display_name": "ThanhNX",
      "email": "thanhnx@onaclover.com",
      "id": 4,
      "nickname": "ThanhNX",
      "roles": Array [
        "user",
        "sales_manager",
        "sales_man",
      ],
    },
    "error": undefined,
    "loading": true,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/emailAuth start 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": true,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/emailAuth success 1`] = `
Object {
  "emailAuth": Object {
    "data": User {
      "auth_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6InRoYW5obnhAb25hY2xvdmVyLmNvbSIsInVpZCI6IjgzOWU2OGJkLTJjN2QtNDkzMy1hMmI3LWYxZDM0MDkyODI0NiIsImlhdCI6MTUyMDg0MjA3MCwiZXhwIjoxNTIxNDQ2ODcwLCJqdGkiOiJiMDlhYjM4NS1iZWZiLTRiNzYtODQyZC0xODQ1ZWU2MGJhNGEifQ.zUxEMCY2zYj6y4jw6-sJAHig-hPzDY_l_MoCT4XfbhI",
      "display_name": "ThanhNX",
      "email": "thanhnx@onaclover.com",
      "id": 4,
      "nickname": "ThanhNX",
      "roles": Array [
        "user",
        "sales_manager",
        "sales_man",
      ],
    },
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;
